# Term-Project

./: CMakeLists.txt  Clientele.cpp  Clientele.h  Customer.cpp  DataBase.cpp  Database.h  Includes.cpp  Inventory.cpp  Inventory.h  Main.cpp  Menu.cpp  Product.cpp  README.md  Utilities.cpp  Utilities.h  Utillities.cpp  make  makefile
google_tests/: CMakeLists.txt
google_tests/unit_tests/: ClienteleTest.cpp  InventoryTest.cpp  TransactionTest.cpp
include/: Clientele.h  Customer.h  Database.h  Inventory.h  Product.h  Rewards.h  Transaction.h  Utilities.h
src/main/: Clientele.cpp  Customer.cpp  Inventory.cpp  Menu.cpp  Product.cpp  Utilities.cpp
src/tests/: test.cpp
